# PersonalFinanceTracker

./: .env  Cargo.toml  Personal Transaction Tracker.postman_collection.json  Personal Transaction Tracker.postman_environment.json
migrations/: 20230827112738_create_users_table.sql  20230827113433_create_accounts_table.sql  20230827113451_create_categories_table.sql  20230827113559_create_transactions_table.sql  20230827113606_create_budgets_table.sql  20230827113615_create_saving_goals_table.sql  20230827113625_create_achievements_table.sql
migrations/2023-08-18-050226_create_users/: down.sql  up.sql
migrations/2023-08-18-050234_create_accounts/: up.sql
migrations/2023-08-18-050304_create_categories/: up.sql
migrations/2023-08-18-050348_create_transactions/: up.sql
migrations/2023-08-18-050409_create_saving_goals/: down.sql  up.sql
migrations/2023-08-18-050415_create_budgets/: down.sql  up.sql
migrations/2023-08-18-050422_create_achievements/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  uuid_param.rs
src/db/: conn.rs
src/dtos/: account_dtos.rs  achievement_dtos.rs  budget_dtos.rs  category_dtos.rs  mod.rs  saving_goal_dtos.rs  transaction_dtos.rs  user_dtos.rs
src/enums/: custom_enums.rs
src/models/: account.rs  achievement.rs  budget.rs  categories.rs  mod.rs  saving_goals.rs  transactions.rs  user.rs
tests/: account_integration_tests.rs  achievement_integration_tests.rs  budget_integration_tests.rs  category_integration_tests.rs  saving_goal_integration_tests.rs  transaction_integration_tests.rs  user_integration_tests.rs
(+17 files in other folders)
